# shard_libc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE.md  README.md  build.ninja  index.md  shard_libc.code-workspace  shard_libc.sln  shard_libc.vcxproj  shard_libc.vcxproj.filters
include/: assert.h  errno.h  excpt.h  fcntl.h  limits.h  ms_sal_fixup.h  sal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  unistd.h  wchar.h
include/internal/: bithacks.h  startup.h
include/linux/x86-64/: env.h
include/sys/: mman.h  syscall.h  types.h
include/win32/: env.h  windows_stuff.h
ref/: c2x_n2563.pfd
src/: CMakeLists.txt
src/internal/: alltypes.h  errno.c  registers.h  stack_prot.c  startup.c  startup.h
src/linux/stdio/: init.c
src/linux/stdlib/: _exit.c  exit.c
src/linux/unistd/: mmap.c  mremap.c  munmap.c  readv.c  sbrk.c  write.c
src/linux/x86-64/: crt0.s  crti.s  crtn.s  env.c
src/linux/x86-64/stdlib/: exit.c
src/linux/x86-64/unistd/: syscall.c  syscall.s  write.c
src/stdio/: fprintf.c  fwrite.c  sprintf.c  stb_sprintf.h  vfprintf.c
src/stdlib/: abort.c  exit.c  malloc.c
src/string/: memccpy.c  memcpy.c  memmove.c  memset.c  strcmp.c  strlen.c  strncpy.c
src/wchar/: wcscmp.c  wcsicmp.c  wcslen.c
src/win32/: crt0.c  dll_loader.c  dumbass_windows_stuff.h  env.c  env.h  shutdown.c  stack_fixup.c  windows_stuff.h
src/win32/stdio/: init.c
src/win32/stdlib/: _exit.c  exit.c  malloc.c
src/win32/unistd/: lseek.c  write.c
src/win32/x86-64/: get_peb.asm  get_peb.s
src/win32/x86-64/unistd/: syscall.asm  syscall.s
tests/: CMakeLists.txt
tests/main/: main.c  main.vcxproj
tests/string/: memccpy.c
tests/test_main/: main.c
